# VALTAN-APP

./: .gitignore  CLAUDE.md  CODEX-VAULT-NEXT-GEN-PRD.md  COMPREHENSIVE-BOOTSTRAP-PLAN.md  IMPLEMENTATION_STATUS.md  README.md  integration_test.py
.claude/: settings.local.json
codex-core/: Cargo.toml  fix_remaining_queries.rs  setup_test_db.sql
codex-core/.config/: nextest.toml
codex-core/.sqlx/: query-1120ee8bf82f3b664c463216ad559fb9d37e5d3ccc5cd9635abe2551b5c82daf.json  query-16bc90ed22a708e01e09803f0d18283cf78df08e94606e9a4c07879924dfd13d.json  query-1c74ce540f988aa341e7cfacf0b06c87501ceb0e1da32cb256c61d67be68415d.json  query-1dd107bbb5b7cfaa0e77dfc2541bd1f295087aaab85c2d307fae4b15eac711d5.json  query-335961877f1fc4b6d8b5b94508eec6cb1f8828927bd9325c05243cb6dc4876b8.json  query-3dee818783511cc669002f309111a38845e5c2bcd791afff4fa386f2fb59ddc0.json  query-4342637993525ab7cdd81d6fc247ecd3c20946a1a12ee6490ff6f2871642000b.json  query-438dddd53754c7678cff4ccffdae58d45cc5727121abd55de025eec7f9c5de31.json  query-5d14ba0d05f1002ba8947156804e5ec083a6f707dfe2626b2ead8e992ecd198d.json  query-a9661413949aa19dff27ea802bcd68b36ff22755066be230bdf58a09d293d3ed.json  query-c1dfda8e9be6526363aabd06128078299f18dce518712cecc3478ef8de364a3f.json  query-cb95e024f7c8429dde6dda55f297926acf3da1eff3aa39ea2193b85b4d7dd8e3.json  query-cbc04ba740518131f6bc0715b98924fb39f7390f1628380199c20eac16e3585e.json  query-d7a04e15aeb842834b47811e8622dbd3e02158ce41f1e61659793e577554b5af.json  query-e33fbe0b8b8eb1bd8a3250c83482bf19eee7307e2947603275f93a7f8355c76a.json  query-e48b31c0bc7dcdac7f5c3e43fbd81ef648cd859751edf92ba60ff0e652eb4925.json  query-e58c16406a6a68f6edeff6429cbfee3e6bf6e1ecefec7db217e03ed6381bd2bd.json  query-f24f8cb950ab94738dc7d6e15afc5f06f9c30833f402a692934df98a9d9f719a.json  query-fc69ff1576a432e7dbd051866296ceaa3c646a6ea29114a9f7fbaf4d3f219c14.json
codex-core/examples/: benchmark.rs
codex-core/migrations/: 0001_init.sql  0002_vector_optimization.sql  0003_fix_vector_blob.sql
codex-core/src/: config.rs  error.rs  lib.rs
codex-core/src/ai/: embeddings.rs  engine.rs  inference.rs  mod.rs  rag.rs
codex-core/src/content/: mod.rs
codex-core/src/db/: connection.rs  mod.rs  models.rs  queries.rs  queries.rs.broken  search.rs  seeder.rs  vector_ops.rs
codex-core/src/update/: downloader.rs  manager.rs  manifest.rs  mod.rs  model_downloader.rs
codex-core/tests/: ai_engine_test.rs  ai_inference_test.rs  content_test.rs  db_models_test.rs  db_queries_test.rs  db_search_test.rs  db_vector_ops_test.rs  gguf_engine_test.rs  search_performance_test.rs
codex-core/tests/common/: ai.rs  content.rs  db.rs  fixtures.rs  mod.rs
codex-vault-app/: .eslintrc.json  package.json  pnpm-lock.yaml  tailwind.config.js
codex-vault-app/src/: App.tsx  index.css
codex-vault-app/src-tauri/: Cargo.toml  tauri.conf.json
codex-vault-app/src-tauri/src/: lib.rs  main.rs
codex-vault-app/src/components/chat/: ChatPane.tsx
codex-vault-app/src/components/layout/: Sidebar.tsx
codex-vault-app/src/components/reader/: ReaderPane.tsx
codex-vault-app/src/components/search/: SearchBar.tsx
codex-vault-app/src/components/ui/: LoadingSpinner.tsx  ThemeToggle.tsx
codex-vault-app/src/contexts/: ThemeContext.tsx
codex-vault-app/src/hooks/: useApi.ts
codex-vault-app/src/services/: api.ts
content/: creative-writing.json  learning-techniques.html  mindfulness-practice.md  quantum-computing.md  stoicism-guide.md
